CSS tweaks to the button

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -329,6 +329,63 @@ img.badgetiny {
 	font-weight     : 600;
 }
 
+#toprow a#push-bell.greentext:hover {
+	border-color     : var(--dark-green);
+	background-color : var(--light-green);
+	color            : var(--background-white);
+}
+
+#toprow a#push-bell.redtext:hover {
+	background-color : var(--light-red);
+	color            : var(--background-white);
+	border-color     : var(--dark-red);
+}
+
+#toprow a.greentext.pushed,
+#toprow a.redtext.pushed {
+	background-color : var(--lightest-gray);
+	border-bottom    : 4px solid var(--background-white);
+	color            : var(--neutral-gray);
+}
+
+#toprow a#push-bell {
+	background-color : var(--background-white);
+	padding          : 4px;
+}
+
+#push-subscribe {
+	float            : right;
+	background-color : var(--lightest-gray);
+	width            : 97%;
+	text-align       : center;
+	padding          : 8px;
+	margin-top       : -2px;
+	border           : none;
+	border-right     : 1px solid var(--dark-blue);
+}
+
+#toprow-push-box {
+	min-height: 0;
+}
+
+p.onesignal-customlink-explanation.medium {
+	font-size      : 12pt;
+	line-height    : 14pt;
+	padding-top    : 2px;
+	padding-bottom : 2px;
+}
+
+#toprow a.redtext {
+	border : 4px solid var(--dark-red);
+	color  : var(--dark-red);
+}
+
+#toprow a.greentext {
+	color  : var(--medium-green);
+	border : 4px solid var(--dark-green);
+}
+
+
 #toprow a.borderright {
 	border-right     : 2px solid rgba(255, 255, 255, 0.14);
 }
@@ -467,7 +524,7 @@ button::-moz-focus-inner{
 	padding-bottom : 6px;
 }
 
-#toprow a.redtext {
+#login-box #toprow a.redtext {
 	color           : var(--dark-red);
 	text-decoration : underline;
 }
@@ -650,9 +707,36 @@ sup {
 	vertical-align : super;
 }
 
+
+button.medium {
+	font-family   : Signika-Light;
+    opacity       : .8;
+	font-size     : 15px;
+	height        : auto;
+	width         : auto;
+	color         : var(--background-white);
+	border-radius : 4px;
+    cursor        : pointer;
+    padding       : 8px 16px;
+    display       : inline-block;
+	font-weight   : 600;
+    touch-action  : manipulation;
+}
+
+button.medium:hover {
+	opacity : 1;
+	color   : var(--background-white);
+}
+
+button.medium.red {
+	background-color: var(--dark-red);
+	border: 1px solid var(--medium-red);
+}
+
 .confirm {
 	border-width : 8px !important;
 }
+
 a.confirm.buttonwhite.full {
 	font-size: 16pt;
 }
