Some visual tweaks

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5096,7 +5096,7 @@ a.fa p {
 .sidenote h5 {
 	padding-left   : 2px;
 	padding-top    : 8px;
-	letter-spacing : 1px;
+	letter-spacing : .25px;
 	line-height    : 22px;
 	font-weight    : 600;
 	text-transform : none;
