--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -385,6 +385,11 @@ p.onesignal-customlink-explanation.medium {
 	border : 4px solid var(--dark-green);
 }
 
+#toprow #login-box a.redtext {
+	border          : none;
+	text-decoration : none;
+}
+
 #toprow a.borderright {
 	border-right     : 2px solid rgba(255, 255, 255, 0.14);
 }
