How did that ever work

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -353,7 +353,7 @@ img.badgetiny {
 	padding          : 4px;
 }
 
-#push-subscribe {
+#push-subscribe, #push-form, #push-impossible, #push-subscribe {
 	float            : right;
 	background-color : var(--lightest-gray);
 	width            : 97%;
