--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -834,21 +834,31 @@ input[type="submit"],
 input[type="button"] {
 	color          : var(--background-white);
     cursor         : pointer !important;
-	font-family    : Signika-Bold;
-	font-weight    : 900;
-	font-size      : 120%;
-	padding-left   : 6px;
-	padding-right  : 6px;
-	padding-bottom : 2px;
-	padding-top    : 2px;
+	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+	font-weight    : 400;
+	font-size      : 15px;
+	padding-left   : 8px;
+	padding-right  : 8px;
+	padding-bottom : 4px;
+	padding-top    : 4px;
 	background     : var(--dark-blue);
-	margin-top     : 4px;
-	margin-right   : 4px;
-	margin-bottom  : 4px;
+	margin-top     : 2px;
+	margin-bottom  : 2px;
 	border-radius  : 4px;
-	border-width   : 2px;
+	border-width   : 1px;
 	border-style   : solid;
 	border-color   : var(--medium-blue);
+    opacity        : 1;
+}
+
+.row a.submit:hover,
+a.submit:hover,
+button.submit:hover,
+a.buttonwhite.submit:hover,
+input[type="submit"]:hover,
+input[type="button"]:hover {
+    opacity      : .8;
+	border-color : var(--darker-gray);
 }
 
 .row a.submit,
@@ -912,17 +922,6 @@ input[type="button"].smallish {
 	font-weight : 600;
 }
 
-input[type="submit"]:hover,
-input[type="button"]:hover {
-	border        : 1px solid var(--medium-gray);
-	color         : var(--dark-blue);
-	background    : var(--background-white);
-	border-top    : 2px solid var(--dark-blue);
-	border-left   : 2px solid var(--dark-blue);
-	border-bottom : 2px solid var(--dark-blue);
-	border-right  : 2px solid var(--dark-blue);
-}
-
 input[type="submit"].skinny {
 	height         : 19px;
 	font-size      : 8pt;
@@ -950,18 +949,20 @@ input[type="button"].thin {
 	font-size      : 9pt;
 	margin-top     : 4px;
 	margin-bottom  : 4px;
-	font-weight    : 600;
-	padding-top    : 2px;
-	padding-bottom : 2px;
+	font-weight    : 400;
+	padding-top    : 3px;
+	padding-bottom : 3px;
+	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
 input[type="submit"].thinner {
 	font-size      : 9pt;
-	margin-top     : 1px;
-	margin-bottom  : 1px;
+	margin-top     : 2px;
+	margin-bottom  : 2px;
 	padding-top    : 0;
 	padding-bottom : 0;
-	font-weight    : 600;
+	font-weight    : 400;
+	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
 input[type="submit"].thinnish {
@@ -2618,21 +2619,20 @@ span.buttonorange,
 a.buttonorange,
 button.buttonwhite,
 span.buttonwhite,
-.blueprint,
-.redprint,
-.greenprint,
 a.buttonwhite {
-    line-height     : 1em;
-	font-weight     : 600;
+	font-weight     : 400;
 	text-decoration : none !important;
-    padding         : 6px;
+    padding         : 4px;
     margin          : 2px;
 	vertical-align  : middle;
-	font-family     : Raleway-Bold;
+	font-family     : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	letter-spacing  : .7px;
-	font-size       : 18px;
+	font-size       : 16px;
     border-radius   : 4px;
+	opacity         : 1;
 }
+
+
 
 button.ltbuttonwhite,
 span.ltbuttonwhite,
@@ -2857,7 +2857,6 @@ input[type="submit"].purpletext {
 /* text shenanigans */
 
 .smallbutton,
-.blueprint,
 .bluetext {
 	color : var(--darker-blue);
 }
@@ -2915,8 +2914,9 @@ input[type="submit"].purpletext {
 	background-color : var(--dark-bluegreen);
 }
 
-.greentext, .greentextnohover {
-	color : var(--medium-green);
+.greentext, .buttonwhite.greentext, .greentextnohover {
+	color        : var(--dark-green);
+	border-color : var(--darker-green);
 }
 
 .greentext.inverthover:hover {
@@ -2963,15 +2963,14 @@ a.buttonwhite.touchsmall {
 }
 
 .smallbutton,
-.blueprint,
-.redprint,
-.greenprint,
 .buttonwhite.smallish,
 a.buttonwhite.smallish {
 	padding        : 4px;
-	letter-spacing : 1px;
-	margin         : 6px;
-	font-size      : 13px;
+	padding-top    : 2px;
+	padding-bottom : 2px;
+	margin         : 4px;
+	font-size      : 12px;
+	font-weight    : 400;
 }
 
 .buttonwhite.smol,
@@ -3020,35 +3019,21 @@ a.buttonwhite.smaller {
 	border-color     : var(--dark-gray);
 }
 
-.redprint, .blueprint, .greenprint {
-	border-width : 1px;
-	border-style : solid;
-}
-
 .smallbutton,
 .bluetext.buttonwhite,
 .bluetextnohover.buttonwhite,
-.blueprint:hover,
 .bluetext.buttonwhite.invert:hover {
-	border-color     : var(--dark-blue);
-	color            : var(--dark-blue);
+	border-color     : var(--darker-blue);
+	color            : var(--darker-blue);
 	background-color : var(--background-white);
 }
 
-.greenprint:hover,
-.greentextnohover.buttonwhite,
-.greentext.buttonwhite.invert:hover {
-	background-color : var(--light-green);
-	color            : var(--dark-green);
-	border-color     : var(--medium-green);
-}
 
 .smallbutton:hover,
 .greentext.buttonwhite:hover,
 .greentext.invert,
 .greentextnohover.invert,
 .greentextnohover.buttonwhite.invert,
-.greenprint,
 .greentext.buttonwhite.invert {
 	background-color : var(--dark-green);
 	border-color     : var(--light-green);
@@ -3059,7 +3044,6 @@ a.buttonwhite.smaller {
 .bluetext.buttonwhite:hover,
 .bluetextnohover.buttonwhite.invert,
 .bluetext.invert,
-.blueprint,
 .bluetext.buttonwhite.invert {
 	background-color : var(--dark-blue);
 	border-color     : var(--medium-blue);
@@ -3095,18 +3079,11 @@ a.buttonwhite.smaller {
 }
 
 .greentext.buttonwhite.invert {
-	background-color : var(--medium-green);
-	border-color     : var(--light-green);
+	background-color : var(--dark-green);
+	border-color     : var(--darker-green);
 	color            : var(--background-white);
 }
 
-.greentext.buttonwhite,
-.greentextnohover.buttonwhite,
-.greentext.buttonwhite.invert:hover {
-	border           : 2px solid var(--medium-green);
-	color            : var(--dark-green);
-	background-color : var(--background-white);
-}
 
 .orangetext.invert,
 .marballot .judgebutton.orangetext.invert,
@@ -3159,8 +3136,8 @@ a.buttonwhite.fa-sm.thinner,
 .buttonwhite.fa-sm.thinner,
 span.buttonwhite.fa-sm.thinner,
 span.buttonwhite.fa-sm.thinner:hover {
-	font-size   : 11pt;
-	font-weight : 400;
+	font-size     : 12px;
+	font-weight   : 400;
 	padding       : 3px !important;
 	padding-left  : 4px !important;
 	padding-right : 4px !important;
@@ -3169,33 +3146,39 @@ span.buttonwhite.fa-sm.thinner:hover {
 .buttonwhite.thinner,
 .buttonwhite.thinner:hover,
 .buttonwhite.thinner.invert {
-	font-family   : Signika-Light;
-	font-size     : 11pt;
-	letter-spacing: 1px;
-	border-width  : 1px;
-	padding       : 4px !important;
-	padding-left  : 6px !important;
-	padding-right : 6px !important;
+	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+	font-size      : 13px;
+	font-weight    : 400;
+	border-width   : 1px;
+	padding        : 4px !important;
+	padding-left   : 6px !important;
+	padding-right  : 6px !important;
 }
 
 .buttonwhite.thinner.semibold {
-	font-family : PTSans-Narrow-Bold;
+	font-family : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	font-weight : 600;
 	font-size   : 12pt;
 }
 
 .smallbutton,
-.smallbutton:hover,
 .buttonwhite.thin,
-.buttonwhite.thin:hover,
 .buttonwhite.thin.invert {
-	border        : 1px solid var(--dark-blue);
-	padding       : 3px !important;
-	padding-left  : 4px !important;
-	padding-right : 4px !important;
-	font-family   : Signika-Bold;
-	font-weight   : 400;
-	font-size     : 11pt;
+	padding        : 4px;
+	padding-top    : 6px;
+	padding-bottom : 6px;
+	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+	font-weight    : 400;
+	font-size      : 11px;
+	white-space    : nowrap;
+	overflow-x     : hidden;
+	opacity        : 1;
+}
+
+.smallbutton:hover,
+.buttonwhite.thin:hover,
+.buttonwhite.thin.invert:hover {
+	opacity       : .8;
 }
 
 .buttonwhite.padmore,
@@ -3203,7 +3186,6 @@ span.buttonwhite.fa-sm.thinner:hover {
 button.padmore {
 	padding: 4px 8px !important;
 }
-
 
 span.buttonwhite.fa-sm,
 button.buttonwhite.fa-sm,
@@ -4746,9 +4728,6 @@ div.main span.half.smidge, div.main span span.half.smidge {
 	clear : both;
 }
 
-.greenprint,
-.blueprint,
-.redprint,
 .full, .block {
 	display        : block;
 	padding        : .5%;
@@ -4758,6 +4737,45 @@ div.main span.half.smidge, div.main span span.half.smidge {
 	margin-bottom  : 4px;
 	margin-top     : 4px;
 }
+
+.greenprint,
+.blueprint,
+.redprint {
+	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+	color          : var(--background-white);
+	display        : block;
+	padding        : 4px;
+	margin         : 4px;
+	padding-top    : 4px;
+	padding-bottom : 4px;
+	margin-bottom  : 4px;
+	margin-top     : 4px;
+	border-radius  : 4px;
+	text-align     : center;
+}
+
+.greenprint {
+	background-color : var(--dark-green);
+	border : 1px solid var(--darker-green);
+}
+
+.blueprint {
+	background-color : var(--dark-blue);
+	border : 1px solid var(--darker-blue);
+}
+
+.redprint {
+	background-color : var(--dark-red);
+	border : 1px solid var(--darker-red);
+}
+
+.greenprint:hover,
+.blueprint:hover,
+.redprint:hover {
+	opacity : .8;
+}
+
+
 .narrow .full, .block {
 	padding-top    : 4px;
 	padding-bottom : 4px;
@@ -5044,9 +5062,6 @@ a.fa p {
 	text-align : left;
 }
 
-.greenprint,
-.blueprint,
-.redprint,
 .centeralign {
 	text-align : center !important;
 }
@@ -5983,9 +5998,6 @@ a.button.padtouchless,
 	font-size      : 16px;
 }
 
-.greenprint,
-.blueprint,
-.redprint,
 .padvert {
 	padding-top    : 8px !important;
 	padding-bottom : 8px !important;
@@ -6141,20 +6153,6 @@ span.status {
 
 .pademail {
 	padding-top : 5px !important;
-}
-
-.row .greenprint,
-.row .redprint,
-.row .blueprint {
-	margin-top    : 3px;
-	margin-bottom : 2px;
-}
-
-.row span .greenprint,
-.row span .redprint,
-.row span .blueprint {
-	padding-top    : 7px !important;
-	padding-bottom : 7px !important;
 }
 
 .paradigmheight {
