--- a/web/lib/css/fonts/fonts.css
+++ b/web/lib/css/fonts/fonts.css
@@ -101,8 +101,22 @@
 @font-face {
 	font-family : 'Raleway-SemiBold';
 	font-style  : normal;
-	font-weight : normal;
+	font-weight : 600;
 	src         : local('Raleway-SemiBold'), url('raleway/Raleway-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+	font-family : 'Raleway-Medium';
+	font-style  : normal;
+	font-weight : 500;
+	src         : local('Raleway-Medium'), url('raleway/Raleway-Medium.ttf') format('truetype');
+}
+
+@font-face {
+	font-family : 'Raleway-Regular';
+	font-style  : normal;
+	font-weight : 400;
+	src         : local('Raleway-Regular'), url('raleway/Raleway-Regular.ttf') format('truetype');
 }
 
 /*!
