--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5511,9 +5511,8 @@ way to fit your requirements.
 	margin         : 0;
 	list-style     : none;
 	z-index        : 500;
-	font-family    : Raleway-Bold;
+	font-family    : Raleway-Semibold;
 	letter-spacing : .5px;
-	font-weight    : 600;
 	padding-top    : 24px;
 }
 
@@ -5531,11 +5530,9 @@ way to fit your requirements.
 
 #nav li a.top_link {
 	display         : block;
-	float           : left;
-	color           : var(--medium-yellow);
+	color           : var(--light-yellow);
 	text-decoration : none;
 	font-size       : 15px;
-	letter-spacing  : 1.2px;
 	cursor          : pointer;
 	width           : 108px;
 	margin-left     : 5px;
@@ -5568,7 +5565,7 @@ way to fit your requirements.
 }
 
 #nav li:hover a.top_link span.down {
-	color : var(--medium-red);
+	color : var(--lightest-yellow);
 }
 
 /* Default list styling */
@@ -5606,18 +5603,22 @@ way to fit your requirements.
 	margin-top    : 0;
 }
 
+#nav li:hover ul.sub.narrow li a {
+	font-family     : Raleway-Medium;
+	font-size       : 13px;
+}
+
 #nav li:hover ul.sub li a {
-	font-family     : Raleway-SemiBold;
+	font-family     : Raleway-Medium;
 	text-align      : center;
 	display         : block;
-	font-size       : 13px;
-	letter-spacing  : 1.1px !important;
+	font-size       : 14px;
 	width           : 124px;
-	background      : var(--light-yellow);
+	background      : var(--lightest-yellow);
 	color           : var(--darker-blue);
 	line-height     : 16px;
 	text-decoration : none;
-	border          : 1px solid var(--darker-blue);
+	border          : 1px solid var(--dark-blue);
 	margin          : 0;
 	padding-top     : 10px;
 	padding-bottom  : 10px;
@@ -5627,8 +5628,9 @@ way to fit your requirements.
 }
 
 #nav li:hover ul.sub li a:hover {
-	background		: var(--darker-blue);
-	color			: var(--medium-yellow);
+	font-family     : Raleway-Bold;
+	background		: var(--dark-blue);
+	color			: var(--lightest-yellow);
 	border-color	: var(--dark-gray);
 	margin-bottom   : 0;
 	margin-top      : 0;
