--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1124,7 +1124,6 @@ span.halffixedflex,
 	padding       : 0 !important;
 	overflow      : hidden;
 	line-height   : 24px;
-	border-bottom : 1px solid var(--light-gray);
 }
 
 .judgeheight div, .judgeheight .span {
@@ -1942,6 +1941,12 @@ tr.even.oddforce td,
 
 .liblrow, .libl  {
 	background-color : var(--lightest-blue);
+}
+
+.libl.hover:hover,
+.liblrow.hover:hover {
+	background-color : var(--medium-blue);
+	color : var(--background-white);
 }
 
 .yellowrow  {
