--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2978,6 +2978,13 @@ a.buttonwhite.smallish {
 	font-weight    : 400;
 }
 
+.smallbutton.fa,
+.fa.buttonwhite.smallish,
+a.buttonwhite.smallish.fa {
+	padding        : 4px;
+}
+
+
 .buttonwhite.smol,
 .buttonwhite.smaller,
 a.buttonwhite.smaller {
