--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2353,8 +2353,8 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 }
 
 .red:hover, .dkred, .dkrednohover, .redhover:hover {
-	background		: var(--dark-red);
-	color			: var(--light-gray);
+	background		: var(--darker-red);
+	color			: var(--background-white);
 }
 
 .orange, .dkorange:hover, .orangenohover {
