--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3251,7 +3251,7 @@ a.printbutton.buttonwhite {
 }
 
 .red {
-	background		: var(--light-red);
+	background		: var(--lightest-red);
 	color			: var(--darker-gray);
 }
 .red:hover, .dkred:hover {
