--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -48,9 +48,9 @@
 	--medium-green : #578415;
 	--dark-green   : #365E00;
 
-	--light-orange  : #C76804;
+	--dark-orange  : #C76804;
 	--medium-orange : #ED7A00;
-	--dark-orange   : #F8AD5F;
+	--light-orange   : #F8AD5F;
 
 	--light-purple  : 350144;
 	--medium-purple : #76278C;
@@ -3095,7 +3095,6 @@ a.buttonwhite.smaller {
 	border-color     : var(--darker-green);
 	color            : var(--background-white);
 }
-
 
 .orangetext.invert,
 .marballot .judgebutton.orangetext.invert,
