Some button tweaks

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3195,7 +3195,10 @@ span.buttonwhite.fa-sm.thinner:hover {
 .buttonwhite.padmore,
 .buttonwhite.thin.padmore,
 button.padmore {
-	padding: 4px 8px !important;
+	padding-top    : 6px;
+	padding-bottom : 6px;
+	padding-left   : 8px;
+	padding-right  : 8px;
 }
 
 span.buttonwhite.fa-sm,
@@ -5957,6 +5960,9 @@ a.button.padtouchless,
 	padding-right : 32px !important;
 }
 
+.padmore {
+	padding : 4px;
+}
 
 .padhalfmore {
 	padding        : 4px;
@@ -5972,10 +5978,6 @@ a.button.padtouchless,
 	margin-bottom  : 1px !important;
 	padding-top    : 1px !important;
 	vertical-align : middle;
-}
-
-.padmore {
-	padding      : 4px !important;
 }
 
 .listing {
