--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -966,13 +966,14 @@ input[type="submit"].thinner {
 }
 
 input[type="submit"].thinnish {
-	height         : auto;
-	font-size      : 11pt;
-	margin-top     : 4px;
-	margin-bottom  : 4px;
-	padding-top    : 0;
-	padding-bottom : 0;
-	font-weight    : 600;
+	height        : auto;
+	font-size     : 10pt;
+	margin-top    : 4px;
+	margin-bottom : 4px;
+	padding       : 2px;
+	padding-left  : 8px;
+	padding-right : 8px;
+	font-weight   : 400;
 }
 
 input[type="submit"].red {
