--- a/client/static/css/tabroom.css
+++ b/client/static/css/tabroom.css
@@ -126,7 +126,8 @@ h4 {
 }
 
 table { 
-	width : 100%;
+	width          : 100%;
+	border-spacing : 1px;
 }
 
 .semibold {
@@ -143,6 +144,42 @@ table {
 }
 .right { 
 	text-align: right;
+}
+
+a {
+	text-decoration : none;
+	display         : inline-block;
+	text-align      : left;
+	line-height     : 16px;
+	padding-bottom  : 1px;
+	color           : var(--darker-gray);
+}
+
+a.full {
+	text-decoration : none;
+	display         : block;
+	text-align      : left;
+	padding         : 4px;
+	padding-top     : 6px;
+	padding-bottom  : 6px;
+	margin          : 0;
+	line-height     : 16px;
+	color           : var(--darker-gray);
+}
+
+a:hover {
+	text-decoration : underline;
+	opacity         : .4;
+}
+a.full:hover {
+	background-color: var(--lightest-blue);
+	text-decoration : none;
+	opacity         : .8;
+}
+
+.hover:hover {
+	background-color: var(--lightest-gray);
+	opacity         : .8;
 }
 
 /* Building Blocks */
@@ -301,3 +338,9 @@ div:after {
 	display : block;
 	height  : 0;
 }
+
+.nospace {
+	padding : 0 !important;
+	margin  : 0 !important;
+}
+
