--- a/client/static/css/tabroom.css
+++ b/client/static/css/tabroom.css
@@ -85,7 +85,7 @@ h1 {
 	margin-left    : 4px;
 	margin-right   : 4px;
 	margin-top     : 8px;
-	margin-bottom  : 16px;
+	margin-bottom  : 0px;
 	text-transform : uppercase;
 }
 
@@ -98,7 +98,7 @@ h2 {
     line-height    : 36px;
 	margin-top     : 0;
     margin-left    : 2px;
-	margin-bottom  : 16px;
+	margin-bottom  : 0px;
     padding-top    : 8px;
 }
 
@@ -111,7 +111,7 @@ h3 {
 	padding-top    : 4px;
 	padding-bottom : 4px;
 	margin-top     : 8px;
-	margin-bottom  : 8px;
+	margin-bottom  : 0px;
 	letter-spacing : 1px;
 }
 
@@ -122,7 +122,7 @@ h4 {
 	padding-top    : 8px;
 	padding-bottom : 2px;
 	margin-top     : 4px;
-	margin-bottom  : 7px;
+	margin-bottom  : 0px;
 }
 
 table { 
@@ -329,6 +329,42 @@ a.full:hover {
 	background-color : var(--light-yellow);
 }
 
+/* Text Colors */
+
+.bluetext {
+	color : var(--dark-blue);
+}
+
+.orangetext {
+	color : var(--dark-orange);
+}
+
+.greentext {
+	color : var(--medium-green);
+}
+
+.fas {
+	margin    : 0;
+	padding   : 6px;
+	font-size : 1.5em;
+}
+.fas-micro {
+	padding   : 2px;
+	font-size : .7em;
+}
+.fas-sm {
+	padding   : 4px;
+	font-size : .9em;
+}
+.fas-lg {
+	padding   : 8px;
+	font-size : 2em;
+}
+
+.fas-2x {
+	padding   : 8px;
+	font-size : 4em;
+}
 
 /* Resetting Functionality */
 
