--- a/web/lib/css/fonts/fonts.css
+++ b/web/lib/css/fonts/fonts.css
@@ -2,8 +2,7 @@
 
 @font-face {
     font-family: 'open_sans';
-    src: url('opensans/opensans-bold-webfont.woff') format ('woff'),
-         url('opensans/opensans-bold-webfont.ttf') format('truetype');
+    src: url('opensans/opensans-bold-webfont.woff') format ('woff');
     font-weight: 700;
     font-style: normal;
 }
