--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3158,13 +3158,14 @@ span.buttonwhite.fa-sm.thinner:hover {
 .buttonwhite.thinner,
 .buttonwhite.thinner:hover,
 .buttonwhite.thinner.invert {
-	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-	font-size      : 13px;
-	font-weight    : 400;
-	border-width   : 1px;
-	padding        : 4px !important;
-	padding-left   : 6px !important;
-	padding-right  : 6px !important;
+	font-family   : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+	font-size     : 14px;
+	font-weight   : 400;
+	border-width  : 1px;
+	padding       : 4px !important;
+	padding-left  : 6px !important;
+	padding-right : 6px !important;
+	line-height   : 13px;
 }
 
 .buttonwhite.thinner.semibold {
