--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6620,7 +6620,17 @@ p.reason {
 	line-height  : 9pt;
 }
 
-@media only screen and (min-width : 878px) and (max-width : 978px) {
+@media only screen and (min-width : 878px) and (max-width : 1114px) {
+
+	h2 {
+		font-size: 2.2em;
+	}
+	h4 {
+		font-size: 1.8em;
+	}
+	h5 {
+		font-size: 1.6em;
+	}
 
 	.pagehalf {
 		flex-basis : 99.5%;
@@ -6762,12 +6772,29 @@ p.reason {
 
 @media only screen and (max-width : 877px) {
 
+	h2 {
+		font-size: 2.0em;
+	}
+	h4 {
+		font-size: 1.6em;
+	}
+	h5 {
+		font-size: 1.4em;
+	}
+
 	.pagehalf {
 		flex-basis : 99.5%;
 		min-width  : 97%;
 		margin-top : 8px;
 	}
 
+	#header {
+		width     : 99%;
+		margin    : auto;
+		padding   : 0;
+		min-width : 0;
+		max-width : 11536px;
+	}
 
 	#logo {
 		display      : inline-block;
