Some gentle css changes

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -912,9 +912,9 @@ input[type="button"].fullbutton {
 }
 
 input[type="button"].fullbutton.smallish {
-	width       : 90%;
-	font-size   : 96%;
-	font-weight : normal;
+	width          : 90%;
+	font-size      : 96%;
+	font-weight    : normal;
 }
 
 input[type="button"].smallish {
@@ -2972,11 +2972,13 @@ a.buttonwhite.touchsmall {
 .buttonwhite.smallish,
 a.buttonwhite.smallish {
 	padding        : 4px;
-	padding-top    : 2px;
-	padding-bottom : 2px;
+	padding-top    : 5px;
+	padding-bottom : 3px;
 	margin         : 4px;
 	font-size      : 12px;
 	font-weight    : 400;
+	border-width   : 1px;
+	line-height    : 12px;
 }
 
 .smallbutton.fa,
@@ -3034,13 +3036,23 @@ a.buttonwhite.smaller {
 
 .smallbutton,
 .bluetext.buttonwhite,
-.bluetextnohover.buttonwhite,
-.bluetext.buttonwhite.invert:hover {
+.bluetextnohover.buttonwhite {
 	border-color     : var(--darker-blue);
 	color            : var(--darker-blue);
 	background-color : var(--background-white);
 }
 
+
+.greentext.buttonwhite {
+	background-color : var(--background-white);
+	color            : var(--dark-green);
+	border-color     : var(--darker-green);
+}
+
+.buttonwhite.invert:hover {
+    opacity: .7;
+    border-color: var(--darker-gray) !important;
+}
 
 .smallbutton:hover,
 .greentext.buttonwhite:hover,
@@ -3064,8 +3076,7 @@ a.buttonwhite.smaller {
 }
 
 .redprint:hover,
-.redtext.buttonwhite,
-.redtext.buttonwhite.invert:hover {
+.redtext.buttonwhite {
 	border-color     : var(--dark-red);
 	background-color : var(--background-white);
 	color            : var(--dark-red);
@@ -3091,11 +3102,6 @@ a.buttonwhite.smaller {
 	border-color     : var(--medium-purple);
 }
 
-.greentext.buttonwhite.invert {
-	background-color : var(--dark-green);
-	border-color     : var(--darker-green);
-	color            : var(--background-white);
-}
 
 .orangetext.invert,
 .marballot .judgebutton.orangetext.invert,
@@ -3105,9 +3111,7 @@ a.buttonwhite.smaller {
 }
 
 .orangeprint:hover,
-.orangetext.buttonwhite,
-.orangetext.buttonwhite.invert:hover,
-.orangetext.invert:hover {
+.orangetext.buttonwhite {
 	border: 2px solid var(--dark-orange);
 	background-color : var(--background-white);
 	color: var(--dark-orange);
@@ -3189,8 +3193,7 @@ span.buttonwhite.fa-sm.thinner:hover {
 }
 
 .smallbutton:hover,
-.buttonwhite.thin:hover,
-.buttonwhite.thin.invert:hover {
+.buttonwhite.thin:hover {
 	opacity       : .8;
 }
 
@@ -4329,11 +4332,11 @@ div.main span.half, div.main div.half, .pagehalf, .pagethird {
 
 .pagefull {
 	margin         : 0;
-	padding-right  : .5%;
-	padding-left   : .5%;
+	padding-right  : .25%;
+	padding-left   : .25%;
 	padding-top    : 4px;
 	padding-bottom : 2px;
-	width          : 98%;
+	width          : 98.2%;
 }
 
 .pagecolumns:after,
