Annoyances and permissions abound

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -11,7 +11,6 @@
  *
  * -- CLP */
 
-
 :root {
 
     --background-white : #fefefe;
@@ -6952,7 +6951,7 @@ p.reason {
 
 .selection_text {
 	font-family : open_sans, Tahoma, Arial, sans-serif;
-	font-size   : 12px;
+	font-size   : 13px;
 }
 
 .sidenote div.full span.select2,
@@ -6971,6 +6970,14 @@ p.reason {
 	margin-right : 15px;
 }
 
+ul .select2-results__options {
+	font-size: 100%;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+	line-height: 24px;
+}
+
 span.select2.select2-container {
     padding-top    : 3px;
     padding-bottom : 2.4px;
@@ -6981,8 +6988,8 @@ span.dropdown-wrapper {
 }
 
 .select2-selection ul {
-	margin: 0;
-	padding: 0;
+	margin    : 0;
+	padding   : 0;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
@@ -6992,11 +6999,19 @@ span.dropdown-wrapper {
 
 .select2-results {
 	font-family : "Inconsolata";
-	font-size   : 14px;
+	font-size   : 15px !important;
+}
+
+li.select2-results__option {
+	line-height: unset;
 }
 
 .select2-results__option {
 	padding-top    : 4px;
 	padding-bottom : 4px;
+}
+
+.select2-container--default .select2-results__option .select2-results__option {
+  padding-left : .5em;
 }
 
