--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -567,6 +567,10 @@ button::-moz-focus-inner{
 	width         : 84%;
 }
 
+input[type="text"].borderred {
+	border: 2px ridge var(--dark-red);
+}
+
 #login-box input[type="submit"] {
 	background-color : var(--darker-blue);
 	font             : 16px "Inconsolata";
