Margins better on new selects

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6943,7 +6943,7 @@ p.reason {
 /* Select2 Select Menus */
 
 .select2 {
-	text-align: center;
+	text-align: left;
 }
 .select2-selection {
 	text-align: left;
