That hellscale untangled, I think

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1423,7 +1423,7 @@ p.action {
 }
 
 p.specific {
-	color        : var(--border-gray);
+	color        : var(--neutral-gray);
 	font-size    : 12px;
 	margin       : 0;
 	padding      : 1px;
