Fucken CHSSA Areas

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4099,6 +4099,7 @@ div:after {
 
 span {
 	display: inline-block;
+	box-sizing: border-box;
 }
 div {
 	display: block;
@@ -4349,7 +4350,8 @@ div.main span.half, div.main div.half, .pagehalf, .pagethird {
 	padding-left   : .25%;
 	padding-top    : 4px;
 	padding-bottom : 2px;
-	width          : 98.2%;
+	width          : 100%;
+	box-sizing     : border-box;
 }
 
 .pagecolumns:after,
@@ -4382,8 +4384,9 @@ div.main span.half, div.main div.half {
 
 .pagehalf  {
 	margin     : 0;
-	flex-basis : 49.5%;
-	min-width  : 48%;
+	flex-basis : 54%;
+	min-width  : 49.5%;
+	box-sizing : border-box;
 }
 
 .pagehalf.padded  {
@@ -4824,6 +4827,14 @@ a.block {
 	padding-bottom : 4px;
 	margin-bottom  : 2px;
 	margin-top     : 2px;
+}
+
+.sidenote div.nospace {
+	box-sizing     : border-box;
+}
+
+.sidenote span.half {
+	width : 49.25%;
 }
 
 .sidenote a.full, .sidenote a.block, .sidenote p.full, .sidenote p.block,
