lots of quizzes

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1,5 +1,5 @@
-
-/* Color Library
+/*
+ * Color Library
  *
  * Chosen with precision and careful calculationis of color theory and
  * artistry.
@@ -827,6 +827,10 @@ input[type="number"].smallish {
 }
 
 input[type="number"].smaller {
+	width : 42px;
+}
+
+input[type="number"].half {
 	width : 42px;
 }
 
