Fun times and fast issues

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7256,7 +7256,7 @@ span.halffixedflex,
 	box-sizing : border-box;
 }
 
-.flexrow label {
+.flexrow label:not(.noflex) {
 	flex        : 1 0 auto;
 	width       : auto;
 	display     : flex;
@@ -7281,11 +7281,11 @@ span.halffixedflex,
 	}
 
 	.third {
-		width : 33%;
+		width : 33.3%;
 	}
 
 	.twothird, .twothirds {
-		width : 66%;
+		width : 66.6%;
 	}
 
 	.quarter {
@@ -7313,35 +7313,35 @@ span.halffixedflex,
 	}
 
 	.sixth {
-		width : 16%;
+		width : 16.6%;
 	}
 
 	.fivesixth, .fivesixths {
-		width : 82.5%;
+		width : 83.3;
 	}
 
 	.seventh {
-		width : 14%;
+		width : 14.28%;
 	}
 
 	.twoseventh, .twosevenths {
-		width : 28%;
+		width : 28.5%;
 	}
 
 	.threeseventh, .threesevenths {
-		width : 42%;
+		width : 42.8%;
 	}
 
 	.fourseventh, .foursevenths {
-		width : 57%;
+		width : 57.1%;
 	}
 
 	.fiveseventh, .fivesevenths {
-		width : 71%;
+		width : 71.4%;
 	}
 
 	.sixsevenths {
-		width : 85%;
+		width : 85.7%;
 	}
 
 	/* EIGHTH */
