Fun times and fast idiots

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7158,7 +7158,8 @@ td.flex.top,
 
 .row span.centeralign,
 .row .centeralign,
-.flexrow .centeralign {
+.flexrow .centeralign,
+.flexrow.centeralign {
 	justify-content: center;
 }
 
