--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1968,12 +1968,17 @@ tr.even.oddforce td,
 	background-color : var(--lightest-blue);
 }
 
-.libl.hover:hover,
-.liblrow.hover:hover {
-	background-color : var(--medium-blue);
-	color : var(--background-white);
+.flexrow label.nohover:hover {
+	background-color : transparent;
 }
 
+.liblrow.hover:hover, .libl.hover:hover  {
+	background-color : var(--light-blue);
+}
+
+.liblrow.yellowhover:hover, .libl.yellowhover:hover  {
+	background-color : var(--lightest-yellow);
+}
 .yellowrow  {
 	background-color : var(--lightest-yellow);
 }
