That is much more capable

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1621,6 +1621,12 @@ table {
 	width          : 100%;
 }
 
+table.fixtable {
+	table-layout : fixed;
+	word-break   : break-all;
+	word-wrap    : break-word;
+}
+
 td  {
 	vertical-align : middle;
 	padding        : 8px;
@@ -5217,6 +5223,14 @@ p.huge {
 	line-height: 1.5em;
 	font-size: 140%;
 }
+
+div.huger,
+span.huger,
+div.huger span,
+span.huger span {
+	font-size : 164%;
+}
+
 
 div.huge,
 span.huge,
