tweaked and twigged

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5873,8 +5873,10 @@ td.cellmax{
 }
 
 .wordwrap{
-	white-space: normal;
-	word-wrap: break-word;
+	white-space   : normal;
+	word-wrap     : normal;
+	overflow-wrap : normal;
+	word-break    : keep-all;
 }
 
 .fullnoscroll {
