Tweaks to result.  Site and rpool selector.  Tournament specific default cat/event

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4823,7 +4823,7 @@ a.block {
 .sidenote a.full, .sidenote a.block, .sidenote p.full, .sidenote p.block,
 .sidenote div.full, .sidenote div.block, .sidenote span.full, .sidenote span.block {
 	width          : 98%;
-	display        : block !important;
+	display        : block;
 	margin         : 0;
 	padding        : 0;
 	padding-left   : 4px;
@@ -4832,6 +4832,12 @@ a.block {
 	margin-bottom  : 3px;
 	margin-top     : 2px;
 	font-size      : 11px;
+}
+
+.sidenote .flexrow, .sidenote a.flexrow {
+    display     : flex;
+    flex-flow   : row;
+	align-items : center;
 }
 
 .full.indent, .sidenote a.full.indent {
@@ -7357,11 +7363,11 @@ span.halffixedflex,
 	/* EIGHTH */
 
 	.eighth {
-		width : 12%;
+		width : 12.5%;
 	}
 
 	.threeeighth, .threeeighths {
-		width : 37%;
+		width : 37.5%;
 	}
 
 	.fiveeighth, .fiveeighths {
@@ -7369,7 +7375,7 @@ span.halffixedflex,
 	}
 
 	.seveneighth, .seveneighths {
-		width : 86%;
+		width : 87.5%;
 	}
 
 	/* TENTH */
