--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7039,6 +7039,14 @@ span.dropdown-wrapper {
 	font-size   : 15px !important;
 }
 
+.select2-results__option--group {
+  white-space    : nowrap;
+}
+
+.smallish .select2-results {
+	font-size   : 14px !important;
+}
+
 li.select2-results__option {
 	line-height: unset;
 }
