--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4834,10 +4834,20 @@ a.block {
 	font-size      : 11px;
 }
 
-.sidenote .flexrow, .sidenote a.flexrow {
-    display     : flex;
-    flex-flow   : row;
-	align-items : center;
+.sidenote div.flexrow,
+.sidenote span.flexrow,
+.sidenote .flexrow,
+.sidenote a.flexrow {
+	width           : 100%;
+    display         : flex;
+    flex-flow       : row;
+	align-items     : center;
+	justify-content : space-between;
+}
+
+.sidenote a.flexrow.half,
+.sidenote a.flexrow .half {
+	width           : 49%;
 }
 
 .full.indent, .sidenote a.full.indent {
