CHSSSSSSSSSSSSSAAAAAAAAAAAAAAAAAAAAgit statusgit statusgit statusgit statusgit statusgit statusgit statusgit statusgit statusgit statusgit status

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6522,10 +6522,17 @@ h6.padsetting {
 	padding-right : 1px;
 }
 
-.smaller.switch, .smaller .switch {
-	padding-top    : 4px;
-	width          : 32px;
-	height         : 20px;
+.flexrow label:not(.noflex) .switch,
+.flexrow .switch,
+.flexrow label .switch,
+.flexrow label .switch.smaller,
+.flexrow label.switch,
+.smaller.switch,
+.smaller .switch {
+	flex        : none;
+	padding-top : 4px;
+	width       : 32px;
+	height      : 20px;
 }
 
 .tiny.switch {
