--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6523,6 +6523,7 @@ h6.padsetting {
 }
 
 .flexrow label:not(.noflex) .switch,
+.flexrow label:not(.noflex).switch,
 .flexrow .switch,
 .flexrow label .switch,
 .flexrow label .switch.smaller,
@@ -6531,8 +6532,6 @@ h6.padsetting {
 .smaller .switch {
 	flex        : none;
 	padding-top : 4px;
-	width       : 32px;
-	height      : 20px;
 }
 
 .tiny.switch {
