sliders gone wild

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6526,13 +6526,24 @@ h6.padsetting {
 .flexrow label:not(.noflex).switch,
 .flexrow .switch,
 .flexrow label .switch,
+.flexrow label.switch {
+	flex        : none;
+	padding-top : 4px;
+	width       : 50px;
+	height      : 24px;
+}
+
+.flexrow label:not(.noflex) .switch.smaller,
+.flexrow label:not(.noflex).switch.smaller,
 .flexrow label .switch.smaller,
-.flexrow label.switch,
 .smaller.switch,
 .smaller .switch {
 	flex        : none;
 	padding-top : 4px;
+	width       : 32px;
+	height      : 20px;
 }
+
 
 .tiny.switch {
 	padding-top    : 2px;
