Quiz upload activate

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1633,6 +1633,13 @@ td  {
 	box-sizing     : border-box;
 }
 
+tr.nospace td,
+.nospace td {
+	padding      : 0px;
+	padding-left : 4px;
+}
+
+tr.padless td,
 .padless td {
 	padding : 4px;
 }
