--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6543,6 +6543,7 @@ h6.padsetting {
 .flexrow label:not(.noflex) .switch.smaller,
 .flexrow label:not(.noflex).switch.smaller,
 .flexrow label .switch.smaller,
+.flexrow label.switch.smaller,
 .smaller.switch,
 .smaller .switch {
 	flex        : none;
