Power of the last minute

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2270,6 +2270,11 @@ div.ltblueborderleft {
 	border-left  : 1px solid var(--border-gray);
 }
 
+.ltbordervert {
+	border-top    : 1px solid var(--border-gray);
+	border-bottom : 1px solid var(--border-gray);
+}
+
 .bordersides {
 	border-right : 1px solid var(--border-gray);
 	border-left  : 1px solid var(--border-gray);
@@ -2491,6 +2496,10 @@ td a.white, td a.plain {
 
 .yellowhover:hover {
 	background-color : var(--light-yellow);
+}
+
+.ltyellowhover:hover {
+	background-color : var(--lightest-yellow);
 }
 
 .yellow,
