Lots of formatting

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3262,6 +3262,12 @@ a.printbutton,
 	padding     : 4px;
 }
 
+.fa-sm {
+	height     : 24px;
+	width      : 24px;
+	text-align : center;
+}
+
 .sidenote a.buttonwhite.fa-smaller,
 .sidenote a.button.fa-smaller,
 span.buttonwhite.fa-smaller,
