Hopefully that works

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2005,7 +2005,6 @@ tr.even.oddforce td,
 	font-family : open_sans, sans-serif;
 }
 
-
 .sidenote div.full span {
 	padding : 1%;
 	margin  : 0;
@@ -4704,7 +4703,7 @@ div.main span.half.smidge, div.main span span.half.smidge {
 }
 
 .sidenote a.half {
-	width          : 48%;
+	width          : 49%;
 	padding-left   : 1%;
 	padding-right  : 0;
 	margin-left    : 0;
@@ -7501,4 +7500,17 @@ span.halffixedflex,
 
 .flexkids>span>span{
 	flex-grow: 1;
+}
+
+.sidenote a.fa.fa-sm {
+	line-height : 12px;
+}
+
+.sidenote a.fa {
+	padding      : 4px;
+	padding-left : 3px;
+	margin       : 2px;
+	margin-left  : 0px;
+	margin-right : 0px;
+	line-height  : normal;
 }
