--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4843,8 +4843,10 @@ a.block {
 
 .sidenote a.full, .sidenote a.block, .sidenote p.full, .sidenote p.block,
 .sidenote div.full, .sidenote div.block, .sidenote span.full, .sidenote span.block {
-	width          : 98%;
+	width          : 99%;
 	display        : block;
+	margin-left    : .5%;
+	margin-right   : .5%;
 	margin         : 0;
 	padding        : 0;
 	padding-left   : 4px;
