Observer counts on the room assigner

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1828,7 +1828,7 @@ td.droppable.smallerdrop {
 .sidenote .draggable,
 .sidenote.full .draggable,
 .sidenote .full .draggable {
-	width          : 46%;
+	width          : 42%;
 	padding-top    : 4px;
 	padding-bottom : 4px;
 	margin-bottom  : 2px;
@@ -5030,6 +5030,10 @@ a.tightline.congress,
 
 .tiny {
 	font-size : 10px;
+}
+.supertiny {
+	font-size   : 8px;
+	line-height : 10px;
 }
 
 td.small,
